<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>waypoint_manager</name>
  <version>0.0.0</version>
  <description>The waypoint_manager metapackage</description>
  <maintainer email="s16c1077hq@s.chibakoudai.jp">Naoki Takahashi</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>goal_event_handler</exec_depend>
  <exec_depend>waypoint_manager_msgs</exec_depend>
  <exec_depend>waypoint_server</exec_depend>
  <exec_depend>check_robot_moving</exec_depend>
  <exec_depend>waypoint_reconfigure</exec_depend>
  <exec_depend>waypoint_visualization</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
