<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>waypoint_visualization</name>
  <version>0.1.0</version>
  <description>The waypoint_visualization package</description>

  <maintainer email="s16c1077hq@s.chibakoudai.jp">Naoki Takahashi</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>interactive_markers</depend>
  <depend>pluginlib</depend>
  <depend>rviz2</depend>
  <depend>rviz_common</depend>
  <depend>rviz_default_plugins</depend>
  <depend>rviz_ogre_vendor</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>waypoint_manager_msgs</depend>
  <depend>qtbase5-dev</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rviz plugin="${prefix}/rviz_plugins.xml"/>
  </export>
</package>
